--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infinite-records",
+  "name": "infinitrecords.com",
   "dependencies": {
     "express": "~3.4.7",
     "hbs": "~2.4.0"
